Made more css changes to the second section by fixing font sizes on small devices and spacing

--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -41,7 +41,7 @@
         margin-bottom: 1.5em;
     }
 
-    &--headline--no-t-margin {
-        margin-top: 0;
+    &--no-t-margin {
+        margin-top: 0; 
     }
 }
